--- a/.gitattributes
+++ b/.gitattributes
@@ -43,6 +43,7 @@
 
 #ETC
 *.a filter=lfs diff=lfs merge=lfs -text
+*.data.unityweb filter=lfs diff=lfs merge=lfs -text
 *.exr filter=lfs diff=lfs merge=lfs -text
 *.tga filter=lfs diff=lfs merge=lfs -text
 *.pdf filter=lfs diff=lfs merge=lfs -text
